Show index page on root
* Styling content posts
* Fetch index action from rails api with axios
* Install bootstrap

--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,16 @@
     transform: rotate(360deg);
   }
 }
+
+.display-inline {
+  display: inline-flex;
+}
+
+h4 {
+  font-weight: bold;
+}
+
+.tile {
+  border-bottom: solid 1px white;
+  margin-top: 2rem;
+}
